Alignment Fixes

--- a/lucky-bone-photography/css/contact.css
+++ b/lucky-bone-photography/css/contact.css
@@ -8,7 +8,7 @@ body {
 
 .contact-info {
     background-color: rgba(255,255,255,0.3);
-    font-size: 23px;
+    font-size: 2em;
     font-weight: 200;
 }
 
